# spice-xpi-ppa

./: Makefile  Makefile.am  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
SpiceXPI/: Makefile  Makefile.am
SpiceXPI/src/: Makefile  Makefile.in  install.rdf
SpiceXPI/src/plugin/: Makefile  Makefile.am  Makefile.in  controller.cpp  controller.h  controller_prot.h  debug.h  np_entry.cpp  npn_gate.cpp  npplat.h  nsISpicec.h  nsScriptablePeerBase.cpp  nsScriptablePeerBase.h  plugin.h  pluginbase.h
SpiceXPI/src/plugin/.deps/: libnsISpicec_la-controller.Plo  libnsISpicec_la-np_entry.Plo  libnsISpicec_la-npn_gate.Plo  libnsISpicec_la-npp_gate.Plo  libnsISpicec_la-nsScriptablePeer.Plo  libnsISpicec_la-nsScriptablePeerBase.Plo  libnsISpicec_la-plugin.Plo  libnsISpicec_la-pluginbase.Plo
autom4te.cache/: output.0  requests  traces.0  traces.1
common/: rederrorcodes.h
data/: Makefile  Makefile.am
debian/: README.Debian  README.source  changelog  control  copyright  rules
debian/patches/: debian-changes-2.7-1ubuntu3  series  spice-xpi-01-build-cachedir.patch  spice-xpi-02-configure.patch
spice-xpi-2.7/: Makefile.in  NEWS  README  aclocal.m4  config.h.in
spice-xpi-2.7/SpiceXPI/: Makefile.in
spice-xpi-2.7/SpiceXPI/src/: Makefile.am
spice-xpi-2.7/SpiceXPI/src/plugin/: Makefile.in  npp_gate.cpp  nsISpicec.idl  nsScriptablePeer.cpp  nsScriptablePeer.h  plugin.cpp  pluginbase.cpp
spice-xpi-2.7/common/: common.h
spice-xpi-2.7/data/: Makefile.in  test.html
